# DRS

./: .env.example  .gitignore  404.html  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.yml  index.html  introduction.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  quick-start.html  searchindex.js  searchindex.json
.github/: dependabot.yml
docs/:  technical_audit.md  DRS_architecture_v1.md  DRS_validation_report_v4.md  Drs_architecture_v2.md  Drs_language&algorithms.md  drs-source-of-truth.md  product-architecture-audit.md  production-readiness-checklist.md  storage-tiers.md
docs-site/: book.toml
drs-core/: Cargo.toml
drs-core/src/: error.rs  lib.rs  types.rs
drs-core/src/capability/: index.rs  policy.rs
drs-core/src/chain/: hash.rs  mod.rs  verify.rs
drs-core/src/crypto/: ed25519.rs  sha256.rs
drs-core/src/did/: key.rs
drs-core/src/jcs/: canonicalise.rs  mod.rs
drs-core/src/jwt/: decode.rs  encode.rs
drs-core/src/wasm/: bindings.rs  mod.rs
drs-core/tests/: test_capability_index.rs  test_conformance.rs  test_did_key.rs  test_ed25519.rs  test_jcs.rs  test_jwt.rs  test_policy.rs  test_sha256.rs  test_verify_chain.rs
drs-sdk/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
drs-verify/: Dockerfile  Dockerfile.local  coverage.out  go.mod  go.sum
explanation/: architecture.html  data-model.html  five-actors.html  regulatory-alignment.html  security-model.html  verification-algorithm.html  what-is-drs.html  why-drs-exists.html
integration-tests/: README.md  (+4 more)
(+251 files in other folders)
