[package]
name = "drs-core"
version = "0.1.0"
edition = "2021"
description = "DRS cryptographic core — Ed25519, SHA-256, JCS, capability index"
license = "Apache-2.0"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]

[dependencies]
ed25519-dalek    = { version = "2.2", features = ["rand_core"] }
sha2             = "0.10"
serde_json_canonicalizer = "0.2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
base64           = { version = "0.22", features = ["alloc"] }
bs58             = "0.5"
subtle           = "2"
thiserror        = "2"
rand             = "0.8"
rand_core        = "0.6"
wasm-bindgen             = { version = "0.2", optional = true }
js-sys                   = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
hex      = "0.4"
proptest = "1"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
panic          = "abort"
